# forex-backend

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 32f3f577d638_baseline_schema.py
app/: config.py  main.py  test_ask.py
app/api/: auth.py  health.py  price.py
app/core/: exceptions.py  lifespan.py  logging.py  rate_limit.py  request_id.py  security_headers.py  security_settings.py
app/db/: session.py
app/ingestion/: config.py  dispatcher.py  health.py  logging_utils.py  models.py  startup_check.py  supervisor.py  supervisor_base.py
app/models/: user.py
app/schemas/: auth.py  base.py
app/security/: internal_auth.py
app/services/: indicators.py  ollama.py  tradingview.py
core/: logging.py  request_id.py
docs/: 1.1.110failure-scenereios-test.md  1.1.12-deployment-runtime-model.md  1.1.2-env-contract.md  1.1.7-subscription-bootsrap-behavior.md  1.1.9-structured-logging-plan.md  11.4-connection-lifecycle-workflow.md  DB_EXPOSURE_LOCKDOWN.md  REVERSE_PROXY_TLS_SANITY.md  SECURITY_BASELINE.md  UWF_BASELINE_RULES.md  lifecycle.md  local-fullstack-runbook.md  news-ingestion0service-24-7.md
tests/: test_health.py  test_internal_auth.py
workers/: correlation.py  logging_contract.py  message_contract.py  mock_intake.py  news_worker.py  notification_worker.py  pattern_message_guard.py  price_worker.py  run_workers.py
(+13 files in other folders)
